--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "angularx-social-login": "^2.2.1",
         "bootstrap": "^4.4.1",
         "file-saver": "^2.0.2",
+        "googlemaps": "^1.12.0",
         "hammerjs": "^2.0.8",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
