--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "file-saver": "^2.0.2",
         "googlemaps": "^1.12.0",
         "hammerjs": "^2.0.8",
+        "html2canvas": "^1.0.0-rc.7",
+        "jspdf": "^2.1.1",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
         "xlsx": "^0.15.4",
@@ -40,6 +42,7 @@
         "@angular/language-service": "~8.2.14",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
+        "@types/jspdf": "^1.3.3",
         "@types/node": "^8.10.59",
         "codelyzer": "^5.0.0",
         "jasmine-core": "~3.4.0",
