--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@angular/common": "~8.2.14",
         "@angular/compiler": "~8.2.14",
         "@angular/core": "~8.2.14",
+        "@angular/fire": "^5.4.2",
         "@angular/forms": "~8.2.14",
         "@angular/material": "^8.2.3",
         "@angular/platform-browser": "~8.2.14",
@@ -26,10 +27,13 @@
         "angularx-social-login": "^2.2.1",
         "bootstrap": "^4.4.1",
         "file-saver": "^2.0.2",
+        "firebase": "^8.1.2",
         "googlemaps": "^1.12.0",
         "hammerjs": "^2.0.8",
         "html2canvas": "^1.0.0-rc.7",
+        "install": "^0.13.0",
         "jspdf": "^2.2.0",
+        "npm": "^6.14.9",
         "rxjs": "~6.4.0",
         "tslib": "^1.10.0",
         "xlsx": "^0.15.4",
